<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Text_Rabbit.Text_Rabbit.Text_Rabbit.GameClassic"
    android:background="#f7f7f7"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_9_wxyz"
        android:onClick="ButtonOnClick"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button8"
        app:layout_constraintBaseline_toBaselineOf="@+id/button17"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button8" />


    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_3_def"
        android:onClick="ButtonOnClick"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/button16" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_7_pqrs"
        android:onClick="ButtonOnClick"
        app:layout_constraintRight_toLeftOf="@+id/button17"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button17"
        tools:layout_constraintBaseline_creator="1" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_8_tuv"
        android:onClick="ButtonOnClick"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="59dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_6_mno"
        android:onClick="ButtonOnClick"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintRight_toRightOf="@+id/button12"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button12" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_4_ghi"
        android:onClick="ButtonOnClick"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/button11"
        app:layout_constraintBaseline_toBaselineOf="@+id/button16"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button11" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_5_jkl"
        android:onClick="ButtonOnClick"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintRight_toRightOf="@+id/button17"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button17" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_btn1"
        android:onClick="backSpace"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintLeft_toLeftOf="@+id/button13"
        app:layout_constraintRight_toRightOf="@+id/button13"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector"
        android:stateListAnimator="@null"
        android:text="@string/_2_abc"
        android:onClick="ButtonOnClick"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintRight_toRightOf="@+id/button16"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button16" />

    <TextView
        android:id="@+id/lblPrompt"
        android:layout_width="180dp"
        android:layout_height="85dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtMain"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTimer"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="50"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button13"
        android:layout_marginTop="169dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTimer"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="168dp"
        app:layout_constraintLeft_toLeftOf="@+id/underline" />

    <TextView
        android:id="@+id/underline"
        android:background="#f25959"
        android:layout_width="214dp"
        android:layout_height="2dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtMain"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMain"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="29dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/lblCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textColor="#f25959"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPrompt"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
